<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MedicacionAdmin2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo">

            </ImageView>
        </RelativeLayout>

        <TextView
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:text="@string/usumed2"
            android:textSize="23sp"
            android:fontFamily="@font/kanit_regular"
            android:textColor="@color/black"
            android:gravity="center"/>
        <EditText
            android:id="@+id/medicacion"
            android:layout_width="312dp"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:layout_marginTop="59dp"
            android:layout_marginBottom="43dp"
            android:background="@drawable/shapedrawable2"
            android:fontFamily="@font/kanit_regular"
            android:hint="@string/medicacion"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#818181"
            android:textColorHint="@color/gris" />

        <EditText
            android:id="@+id/dosis"
            android:layout_width="312dp"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:layout_marginBottom="43dp"
            android:background="@drawable/shapedrawable2"
            android:fontFamily="@font/kanit_regular"
            android:hint="@string/dosis"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#818181"
            android:textColorHint="@color/gris" />



        <Button
            android:id="@+id/asignar"
            android:layout_width="128dp"
            android:layout_height="60dp"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/sanast"
            android:fontFamily="@font/kanit_regular"
            android:gravity="center"
            android:text="@string/asignar"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:cornerRadius="25dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>