<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservaCita"
    android:background="@drawable/fondo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/usuariomenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/kanit_regular"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:textSize="22sp">

        </TextView>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo">

        </ImageView>
    </RelativeLayout>

        <TextView
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/elegir"
            android:textSize="23sp"
            android:fontFamily="@font/kanit_regular"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"/>

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shapedrawable" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/consultaTelefonica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefonica"
                android:fontFamily="@font/kanit_regular"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/consultaPresencial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/presencial"
                android:fontFamily="@font/kanit_regular"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </RadioGroup>

        <Button
            android:id="@+id/reservar"
            android:layout_width="128dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/sanast"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/reservar"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="25dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/sanast"
            android:contentDescription="@string/ayuda"
            android:src="@drawable/ayuda" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>