<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="185dp"
        android:layout_height="171dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="114dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="312dp"
        android:layout_height="74dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/shapedrawable2"
        android:hint="@string/contraseña"
        android:autofillHints="password"
        android:fontFamily="@font/kanit_regular"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="@color/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="312dp"
        android:layout_height="74dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/shapedrawable2"
        android:hint="@string/correo"
        android:autofillHints="emailAddress"
        android:fontFamily="@font/kanit_regular"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#818181"
        android:textColorHint="@color/gris"
        app:layout_constraintBottom_toTopOf="@+id/contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="296dp"
        android:backgroundTint="@color/sanast"
        android:contentDescription="@string/ayuda"
        android:src="@drawable/ayuda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/entrar"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/entrar"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="@color/sanast"
        app:cornerRadius="25dp"
        android:text="@string/entrar"
        android:textColor="@color/black"
        android:fontFamily="@font/kanit_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña" />

</androidx.constraintlayout.widget.ConstraintLayout>