<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".CentroSalud">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end|bottom"
                android:backgroundTint="@color/sanast"
                android:contentDescription="@string/ayuda"
                android:src="@drawable/ayuda" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo">

            </ImageView>

            <TextView
                android:layout_width="1228dp"
                android:layout_height="60dp"
                android:layout_marginTop="90dp"
                android:text="@string/centrosalud"
                android:textSize="23sp"
                android:fontFamily="@font/kanit_regular"
                android:textColor="@color/white"
                android:gravity="center"/>

            <ListView
                android:id="@+id/listView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="160dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/shapedrawable">

            </ListView>

        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>