<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProximasCitas"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/usuariomenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kanit_regular"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:textSize="22sp">

            </TextView>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo">

            </ImageView>
        </RelativeLayout>

        <TextView
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/kanit_regular"
            android:gravity="center"
            android:text="@string/citas"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <ListView
            android:id="@+id/listMedicacion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="120dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/shapedrawable2"/>

        <Button
            android:id="@+id/volver"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginTop="-90dp"
            android:backgroundTint="@color/sanast"
            app:cornerRadius="25dp"
            android:text="@string/volver"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@drawable/flecha"
            android:fontFamily="@font/kanit_regular"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>